--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
   <!-- Custom styles for this template -->
   <link href="css/scrolling-nav.css" rel="stylesheet">
 
-<body>
+<body id="page-top">
 
   <!-- Navigation -->
-  <nav>
+  <nav id="mainNav">
     <div>
       <a>Start Bootstrap</a>
       <button>
         <span></span>
       </button>
-      <div>
+      <div id="navbarResponsive">
         <ul>
           <li>
             <a>About</a>
@@ -50,7 +50,7 @@
     </div>
   </header>
 
-  <section>
+  <section id="about">
     <div>
       <div>
         <div>
@@ -67,7 +67,7 @@
     </div>
   </section>
 
-  <section>
+  <section id="services">
     <div>
       <div>
         <div>
@@ -78,7 +78,7 @@
     </div>
   </section>
 
-  <section>
+  <section id="contact">
     <div>
       <div>
         <div>
